# mt4-docker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.monitor  Dockerfile.python  Dockerfile.security-updater  Dockerfile.websocket  GET_DEMO_MT4.md  MT4_Data_Viewer.html  Makefile  README.md  README_AUTOMATION.md  SETUP.md  STREAMING_DEMO_RESULTS.md  StreamingPlatform_test_utf8.mq4  TEST_RESULTS_REPORT.md  TEST_RESULTS_SUMMARY.md  VNC_GUIDE.md  ZEROMQ_PUBSUB_LOCATIONS.md  check_status.sh  clean_zmq_demo.py  cleanup.sh  demo_streaming.py  demo_zmq_pubsub.py  deploy_ea.sh  deploy_precompiled_ea.sh  docker-compose.api.yml  docker-compose.elk.yml  docker-compose.multibroker.yml  docker-compose.secure.yml  docker-compose.security.yml  docker-compose.websocket.yml  docker-compose.yml  docker-compose.zmq.yml  download_demo_mt4.sh  (+29 more)
config/: bridge_config_secure.json  community.ini  notifications.ini  server.ini  servers.ini  terminal.ini
dll_source/: CMakeLists.txt  Dockerfile.build  README_IMPLEMENTATION_STATUS.md  TEST_RESULTS.md  build.sh  build_dll.md  build_simple.sh  build_tests.sh  build_winsock.sh  mt4zmq.cpp  mt4zmq.h  mt4zmq_simple.cpp  mt4zmq_v2.cpp  mt4zmq_winsock.cpp  mt4zmq_winsock_fixed.cpp  run_tests.py  test_dll.py  test_mt4zmq.cpp  validate_dll.py  zmq4mt4.cpp
docs/: ARCHITECTURE.md  BEST_PRACTICES_ANALYSIS.md  DISASTER_RECOVERY_GUIDE.md  ELK_STACK_GUIDE.md  EXPORT_WITHOUT_EA.md  FIX_TERMINAL_ISSUE.md  MT4_DLL_INTEGRATION.md  OOP_ANALYSIS.md  OOP_IMPROVEMENTS_GUIDE.md  (+7 more)
(+209 files in other folders)
